ASC Prod BAckup/ASC Prod/force-app/main/default/objects/B2B_Homepage_Carousel__mdt/fields/Heading__c.field-meta.xml
<CustomField>
    <fullName>Heading__c</fullName>
    <label>Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>