ASC Prod BAckup/ASC Prod/force-app/main/default/objects/B2B_Homepage_Carousel__mdt/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>