ASC Prod BAckup/ASC Prod/force-app/main/default/objects/B2B_Homepage_Carousel__mdt/fields/URL_Target__c.field-meta.xml
<CustomField>
    <fullName>URL_Target__c</fullName>
    <label>URL Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>