ASC Prod BAckup/ASC Prod/force-app/main/default/objects/B2B_Homepage_Carousel__mdt/listViews/data.listView-meta.xml
<ListView>
    <fullName>data</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Description__c</columns>
    <columns>Image_URL__c</columns>
    <columns>Link_URL__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>URL_Target__c</columns>
    <filterScope>Everything</filterScope>
    <label>data</label>
</ListView>